<resources>
    <string name="app_name">RealmApp</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <string name="realm">Realm</string>
    <string name="realm_intro">受亿万开发者所信赖的数据库现已完全开放源代码并且仍然免费</string>
    <string name="products">产品</string>
    <string name="realm_mobile_platform">Realm Mobile Platform</string>
    <string name="realm_mobile_database">Realm Mobile Database</string>
    <string name="community">社区</string>
    <string name="java">Java</string>
    <string name="objective_c">Objective-C</string>
    <string name="react_native">React Native</string>
    <string name="swift">Swift</string>
    <string name="xamarin">Xamarin</string>
    <string name="news">新闻</string>
    <string name="document">文档</string>
    <string name="price">价格</string>
    <string name="contact">联系我们</string>

</resources>
